proc-macro-error/test-crate/tests/ui/multi-error.stderr
error: multiple error part: multi1

  = note: help message test
  = help: Option help test
  = note: I see what you did here...

 --> $DIR/multi-error.rs:4:10
  |
4 | make_fn!(multi1, multi2, _, multi3);
  |          ^^^^^^

error: multiple error part: multi2

  = note: help message test
  = help: Option help test
  = note: I see what you did here...

 --> $DIR/multi-error.rs:4:18
  |
4 | make_fn!(multi1, multi2, _, multi3);
  |                  ^^^^^^

error: multiple error part: multi3

  = note: help message test
  = help: Option help test
  = note: I see what you did here...

 --> $DIR/multi-error.rs:4:29
  |
4 | make_fn!(multi1, multi2, _, multi3);
  |                             ^^^^^^
