proc-macro-error/test-crate/tests/ui/multi-error.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!(multi1, multi2, _, multi3);

fn main() {}
